[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.1.0"
itertools = "0.13.0"
md5 = "0.7.0"
num = "0.4.1"
rayon = "1.8.1"
rustc-hash = "2.1.0"
stopwatch = "0.0.7"
strided = "0.2.9"
regex = "1.11.1"
derive_more = { version = "1.0.0", features = ["full"] }
