[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.8.0"
itertools = "0.14.0"
md5 = "0.7.0"
num = "0.4.3"
rayon = "1.10.0"
rustc-hash = "2.1.1"
simple-stopwatch = "0.1.4"
strided = "0.2.9"
regex = "1.11.1"
pathfinding = "4.14.0"
paste = "1.0.15"
primes = "0.4.0"
z3 = "0.19.5"
